--- a/PetHomeAngular/src/app/foot/foot.component.html
+++ b/PetHomeAngular/src/app/foot/foot.component.html
@@ -1,1 +1,80 @@
-<p>foot works!</p>
+<footer class="bg-light text-center text-lg-start text-dark">
+    <div class="container p-4">
+        <div class="row my-4">
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+
+                <div class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto"
+                    style="width: 150px; height: 150px;">
+                    <img src="https://mdbootstrap.com/img/Photos/new-templates/animal-shelter/logo.png" height="70"
+                        alt="" loading="lazy" />
+                </div>
+
+                <p class="text-center">Adopta una mascota, cambia una vida</p>
+
+                <ul class="list-unstyled d-flex flex-row justify-content-center">
+                    <li>
+                        <a class="text-dark px-2" href="#!">
+                            <i class="fab fa-facebook-square"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="text-dark px-2" href="#!">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="text-dark ps-2" href="#!">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                <h5 class="text-uppercase mb-4">PetHome</h5>
+
+                <ul class="list-unstyled">
+                    <li class="mb-2">
+                        <a href="#!" class="text-dark"><i class="fas fa-paw pe-3"></i>Inicio</a>
+                    </li>
+                    <li class="mb-2">
+                        <a href="#!" class="text-dark"><i class="fas fa-paw pe-3"></i>Mascotas</a>
+                    </li>
+                    <li class="mb-2">
+                        <a href="#!" class="text-dark"><i class="fas fa-paw pe-3"></i>Protectoras</a>
+                    </li>
+                    <li class="mb-2">
+                        <a href="#!" class="text-dark"><i class="fas fa-paw pe-3"></i>Aviso Legal</a>
+                    </li>
+                    <li class="mb-2">
+                        <a href="#!" class="text-dark"><i class="fas fa-paw pe-3"></i>Política de Privacidad</a>
+                    </li>
+                    <li class="mb-2">
+                        <a href="#!" class="text-dark"><i class="fas fa-paw pe-3"></i>Política de Cookies</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                <!-- Espacio vacío por si quieres agregar algo más después -->
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                <h5 class="text-uppercase mb-4">Contacto</h5>
+
+                <ul class="list-unstyled">
+                    <li>
+                        <p><i class="fas fa-phone pe-2"></i>+34 666 999 111</p>
+                    </li>
+                    <li>
+                        <p><i class="fas fa-envelope pe-2 mb-0"></i>info&#64;pethome.com</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+        © 2025 PetHome. Todos los derechos reservados.
+    </div>
+</footer>
