añadido fondo detras y quitado nav menu por el head

--- a/PetHomeAngular/src/app/head/head.component.html
+++ b/PetHomeAngular/src/app/head/head.component.html
@@ -1,55 +1,12 @@
 
-<div class="container-navbar">
-    <nav class="navbar container">
-        <a class="navbar__logo" href="index.html">
-            <img src="img/logo.png" alt="">
-            <span>
-                PureFruit
-            </span>
-        </a>
-        <div class="navbar__nav">
-            <ul class="nav__list">
-                <li class="nav__link link-active">
-                    <a href="#">Inicio</a>
-                </li>
-                <li class="nav__link">
-                    <a href="#">Frutas</a>
-                </li>
-                <li class="nav__link">
-                    <a href="#">Servicios</a>
-                </li>
-                <li class="nav__link">
-                    <a href="#">Contacto</a>
-                </li>
-            </ul>
-            <form class="navbar__search" action="">
-                <a class="search__icon" href="#">
-                    <img src="img/search-heart.svg" alt="">
-                </a>
-            </form>
-            <a class="button button-primary button-saber-mas" href="#">¡Saber más!</a>
-            <button class="navbar__toggle-btn" aria-label="Toggle Navigation">
-                <img src="img/menu-icon.svg" alt="Menu">
-            </button>
-            <div class="navbar__mobile-menu">
-                <ul class="nav__list-mobile">
-                    <li class="nav__link-mobile link-active">
-                        <a href="#">Inicio</a>
-                    </li>
-                    <li class="nav__link-mobile">
-                        <a href="#">Frutas</a>
-                    </li>
-                    <li class="nav__link-mobile">
-                        <a href="#">Servicios</a>
-                    </li>
-                    <li class="nav__link-mobile">
-                        <a href="#">Contacto</a>
-                    </li>
-                </ul>
-            </div>
-
-
-        </div>
-    </nav>
-</div>
-
+<nav class="mask">
+    <a href="#">Mask with linear-gradient</a>
+    <ul class="list">
+      <li><a href="#">About</a></li>
+      <li><a href="#">Projects</a></li>
+      <li><a href="#">News</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+    <button class="search">Search</button>
+    <button class="menu">Menu</button>
+  </nav>
