--- a/PetHomeAngular/src/app/head/head.component.html
+++ b/PetHomeAngular/src/app/head/head.component.html
@@ -1,24 +1,22 @@
 <nav>
     <div class="wrapper">
-      <div class="logo"><img src="/assets/img/pethome2.svg" alt="logo"></div>
+      <div class="logo"><img src="/assets/img/logo pet home.png" alt="logo" class="logo"></div>
       <input type="radio" name="slider" id="menu-btn">
       <input type="radio" name="slider" id="close-btn">
       <ul class="nav-links">
         <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#">Inicio</a></li>
         <li>
-          <a href="#" class="desktop-item">Dropdown Menu</a>
+          <a href="#" class="desktop-item">Adopta</a>
           <input type="checkbox" id="showDrop">
-          <label for="showDrop" class="mobile-item">Dropdown Menu</label>
+          <label for="showDrop" class="mobile-item">Mascotas</label>
           <ul class="drop-menu">
-            <li><a href="#">Drop menu 1</a></li>
-            <li><a href="#">Drop menu 2</a></li>
-            <li><a href="#">Drop menu 3</a></li>
-            <li><a href="#">Drop menu 4</a></li>
+            <li><a href="#">Perros</a></li>
+            <li><a href="#">Gatos</a></li>
+            <li><a href="#">Otros</a></li>
           </ul>
         </li>
-        <li>
+       <!--  <li>
           <a href="#" class="desktop-item">Mega Menu</a>
           <input type="checkbox" id="showMega">
           <label for="showMega" class="mobile-item">Mega Menu</label>
@@ -56,8 +54,17 @@
               </div>
             </div>
           </div>
-        </li>
-        <li><a href="#">Feedback</a></li>
+        </li> -->
+        <li><a href="#">Organizaciones</a></li>
+        <li><a href="#">Sobre Nosotros</a></li>
+        <li><!-- From Uiverse.io by kamehame-ha --> 
+          <button class="button">
+            <p class="text">Iniciar Sesión</p>
+          </button></li>
+          <li><!-- From Uiverse.io by kamehame-ha --> 
+            <button class="button">
+              <p class="text">Regístrate ya</p>
+            </button></li>
       </ul>
       <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
     </div>
