--- a/PetHomeAngular/src/app/nav-menu/nav-menu.component.html
+++ b/PetHomeAngular/src/app/nav-menu/nav-menu.component.html
@@ -1,53 +1,34 @@
-<div class="container-navbar">
-    <nav class="navbar container">
-        <a class="navbar__logo" href="index.html">
-            <img src="img/pethome2.svg" alt="">
-            <span>
-                PureFruit
-            </span>
-        </a>
-        <div class="navbar__nav">
-            <ul class="nav__list">
-                <li class="nav__link link-active">
-                    <a href="#">Inicio</a>
-                </li>
-                <li class="nav__link">
-                    <a href="#" routerLink ="adopta" routerLinkActive="fw-bold">Adopta</a>
-                </li>
-                <li class="nav__link">
-                    <a href="#" routerLink ="organizaciones" routerLinkActive="fw-bold">Organizaciones</a>
-                </li>
-                <li class="nav__link">
-                    <a href="#" routerLink ="sobre-nosotros" routerLinkActive="fw-bold">Sobre Nosotros</a>
-                </li>
-            </ul>
-            <form class="navbar__search" action="">
-                <a class="search__icon" href="#">
-                    <img src="img/search-heart.svg" alt="">
-                </a>
-            </form>
-            <a class="button button-primary button-saber-mas" href="#">Iniciar Sesión</a>
-            <button class="navbar__toggle-btn" aria-label="Toggle Navigation">
-                <img src="img/menu-icon.svg" alt="Menu">
-            </button>
-            <div class="navbar__mobile-menu">
-                <ul class="nav__list-mobile">
-                    <li class="nav__link-mobile link-active">
-                        <a href="#">Inicio</a>
-                    </li>
-                    <li class="nav__link-mobile">
-                        <a href="#">Adopta</a>
-                    </li>
-                    <li class="nav__link-mobile">
-                        <a href="#">Organizaciones</a>
-                    </li>
-                    <li class="nav__link-mobile">
-                        <a href="#">Sobre Nosotros</a>
-                    </li>
-                </ul>
-            </div>
-
-
-        </div>
-    </nav>
-</div>
+<nav>
+    <div class="wrapper">
+      <div class="logo"><img src="/assets/img/logo pet home.png" alt="logo" class="logo"></div>
+      <input type="radio" name="slider" id="menu-btn">
+      <input type="radio" name="slider" id="close-btn">
+      <ul class="nav-links">
+        <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
+        <li><a class="nav-link active" aria-current="page" routerLink="/inicio" routerLinkActive="fw-bold">Inicio</a></li>
+        <li>
+        <a class="nav-link" routerLink="/adopta" routerLinkActive="fw-bold">Adopta</a>
+          <input type="checkbox" id="showDrop">
+          <label for="showDrop" class="mobile-item">Mascotas</label>
+          <ul class="drop-menu">
+            <li><a class="nav-link" routerLink="/mascotas/perros" routerLinkActive="fw-bold">Perros</a></li>
+            <li><a class="nav-link" routerLink="/mascotas/gatos" routerLinkActive="fw-bold">Gatos</a></li>
+            <li><a class="nav-link" routerLink="/mascotas/otros" routerLinkActive="fw-bold">Otros</a></li>
+          </ul>
+        </li>
+       
+        <li><a class="nav-link" routerLink="/organizaciones" routerLinkActive="fw-bold">Organizaciones</a></li>
+        <li><a class="nav-link" routerLink="/nosotros" routerLinkActive="fw-bold">Sobre Nosotros</a></li>
+        <li><!-- From Uiverse.io by kamehame-ha --> 
+          <button class="button">
+            <p class="text">Iniciar Sesión</p>
+          </button></li>
+          <li><!-- From Uiverse.io by kamehame-ha --> 
+            <button class="button">
+              <p class="text">Regístrate ya</p>
+            </button></li>
+      </ul>
+      <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
+    </div>
+  </nav>
+  
