--- a/PetHomeAngular/src/app/app.component.html
+++ b/PetHomeAngular/src/app/app.component.html
@@ -1,9 +1,12 @@
 
-      <app-nav-menu/>
-    
+<app-nav-menu/>
+<div class="content">
+   
       <router-outlet></router-outlet>
 
       <!-- <app-foot/> -->
+</div>
+
 
 
 
