registro y login a medias

--- a/PetHomeAngular/src/app/head/head.component.html
+++ b/PetHomeAngular/src/app/head/head.component.html
@@ -1,1 +1,72 @@
-<p>head works!</p>
+<nav>
+    <div class="wrapper">
+      <div class="logo"><img src="/assets/img/logo pet home.png" alt="logo" class="logo"></div>
+      <input type="radio" name="slider" id="menu-btn">
+      <input type="radio" name="slider" id="close-btn">
+      <ul class="nav-links">
+        <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
+        <li><a href="#">Inicio</a></li>
+        <li>
+          <a href="#" class="desktop-item">Adopta</a>
+          <input type="checkbox" id="showDrop">
+          <label for="showDrop" class="mobile-item">Mascotas</label>
+          <ul class="drop-menu">
+            <li><a href="#">Perros</a></li>
+            <li><a href="#">Gatos</a></li>
+            <li><a href="#">Otros</a></li>
+          </ul>
+        </li>
+       <!--  <li>
+          <a href="#" class="desktop-item">Mega Menu</a>
+          <input type="checkbox" id="showMega">
+          <label for="showMega" class="mobile-item">Mega Menu</label>
+          <div class="mega-box">
+            <div class="content">
+              <div class="row">
+                <img src="https://fadzrinmadu.github.io/hosted-assets/responsive-mega-menu-and-dropdown-menu-using-only-html-and-css/img.jpg" alt="">
+              </div>
+              <div class="row">
+                <header>Design Services</header>
+                <ul class="mega-links">
+                  <li><a href="#">Graphics</a></li>
+                  <li><a href="#">Vectors</a></li>
+                  <li><a href="#">Business cards</a></li>
+                  <li><a href="#">Custom logo</a></li>
+                </ul>
+              </div>
+              <div class="row">
+                <header>Email Services</header>
+                <ul class="mega-links">
+                  <li><a href="#">Personal Email</a></li>
+                  <li><a href="#">Business Email</a></li>
+                  <li><a href="#">Mobile Email</a></li>
+                  <li><a href="#">Web Marketing</a></li>
+                </ul>
+              </div>
+              <div class="row">
+                <header>Security services</header>
+                <ul class="mega-links">
+                  <li><a href="#">Site Seal</a></li>
+                  <li><a href="#">VPS Hosting</a></li>
+                  <li><a href="#">Privacy Seal</a></li>
+                  <li><a href="#">Website design</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </li> -->
+        <li><a href="#">Organizaciones</a></li>
+        <li><a href="#">Sobre Nosotros</a></li>
+        <li><!-- From Uiverse.io by kamehame-ha --> 
+          <button class="button">
+            <p class="text">Iniciar Sesión</p>
+          </button></li>
+          <li><!-- From Uiverse.io by kamehame-ha --> 
+            <button class="button">
+              <p class="text">Regístrate ya</p>
+            </button></li>
+      </ul>
+      <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
+    </div>
+  </nav>
+  
