--- a/PetHomeAngular/src/app/nav-menu/nav-menu.component.html
+++ b/PetHomeAngular/src/app/nav-menu/nav-menu.component.html
@@ -20,11 +20,11 @@
         <li><a class="nav-link" routerLink="/organizaciones" routerLinkActive="fw-bold">Organizaciones</a></li>
         <li><a class="nav-link" routerLink="/nosotros" routerLinkActive="fw-bold">Sobre Nosotros</a></li>
         <li><!-- From Uiverse.io by kamehame-ha --> 
-          <button class="button">
+          <button  routerLink="/login" routerLinkActive="fw-bold" class="button">
             <p class="text">Iniciar Sesión</p>
           </button></li>
           <li><!-- From Uiverse.io by kamehame-ha --> 
-            <button class="button">
+            <button routerLink="/register" class="button">
               <p class="text">Regístrate ya</p>
             </button></li>
       </ul>
