--- a/PetHomeAngular/src/app/auth/register/register.component.html
+++ b/PetHomeAngular/src/app/auth/register/register.component.html
@@ -1,1 +1,34 @@
-<p>register works!</p>
+<!-- From Uiverse.io by Yaya12085 --> 
+<div class="center-wrapper">
+<form class="form">
+    <p class="title">¡Crea tu cuenta en PetHome!</p>
+    <p class="message">Únete a nuestra comunidad y dale una segunda oportunidad a una mascota. 🐶🐱 </p>
+        <div class="flex">
+        <label>
+            <input required="" placeholder="" type="text" class="input">
+            <span>Nombre</span>
+        </label>
+  
+        <label>
+            <input required="" placeholder="" type="text" class="input">
+            <span>Apellidos</span>
+        </label>
+    </div>  
+            
+    <label>
+        <input required="" placeholder="" type="email" class="input">
+        <span>Email</span>
+    </label> 
+        
+    <label>
+        <input required="" placeholder="" type="password" class="input">
+        <span>Contraseña</span>
+    </label>
+    <label>
+        <input required="" placeholder="" type="password" class="input">
+        <span>Confirmar contraseña</span>
+    </label>
+    <button class="submit">Continuar</button>
+    <p class="signin">¿Ya tienes una cuenta ? <a href="#">Iniciar sesión</a> </p>
+</form>
+</div>
