--- a/PetHomeAngular/src/app/secciones/inicio/inicio.component.html
+++ b/PetHomeAngular/src/app/secciones/inicio/inicio.component.html
@@ -1,1 +1,10 @@
-<p>inicio works!</p>
+<div class="hero">
+    <div class="overlay">
+      <h1>ADOPTA A UNA MASCOTA</h1>
+      <div class="buttons">
+        <button class="btn adopt">Adoptar</button>
+        <button class="btn more">Más</button>
+      </div>
+    </div>
+  </div>
+  
