--- a/PetHomeAngular/src/app/auth/register/register.component.html
+++ b/PetHomeAngular/src/app/auth/register/register.component.html
@@ -1,34 +1,40 @@
 <!-- From Uiverse.io by Yaya12085 --> 
 <div class="center-wrapper">
-<form class="form">
+<form class="form" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <p class="title">¡Crea tu cuenta en PetHome!</p>
     <p class="message">Únete a nuestra comunidad y dale una segunda oportunidad a una mascota. 🐶🐱 </p>
         <div class="flex">
         <label>
-            <input required="" placeholder="" type="text" class="input">
+            <input required="" formControlName="nombre" type="text" class="input">
             <span>Nombre</span>
         </label>
   
         <label>
-            <input required="" placeholder="" type="text" class="input">
-            <span>Apellidos</span>
+            <input required="" formControlName="telefono" placeholder="" type="text" class="input">
+            <span>Telefóno</span>
         </label>
     </div>  
-            
+     
     <label>
-        <input required="" placeholder="" type="email" class="input">
+      <input required="" formControlName="direccion" placeholder="" type="text" class="input">
+      <span>Dirección</span>
+    </label> 
+
+    <label>
+        <input required="" formControlName="email" placeholder="" type="email" class="input">
         <span>Email</span>
     </label> 
         
     <label>
-        <input required="" placeholder="" type="password" class="input">
+        <input required="" formControlName="contrasena" placeholder="" type="password" class="input">
         <span>Contraseña</span>
     </label>
-    <label>
-        <input required="" placeholder="" type="password" class="input">
-        <span>Confirmar contraseña</span>
-    </label>
-    <button class="submit">Continuar</button>
+    <select formControlName="tipoUsuario">
+      <option value="cliente">Cliente</option>
+      <option value="protectora">Protectora</option>
+    </select>
+    <button class="submit" button type="submit" [disabled]="!registerForm.valid">Continuar</button>
     <p class="signin">¿Ya tienes una cuenta ? <a href="#">Iniciar sesión</a> </p>
 </form>
 </div>
+
