esqueleto sobre nosotros realizado

--- a/PetHomeAngular/src/app/nav-menu/nav-menu.component.html
+++ b/PetHomeAngular/src/app/nav-menu/nav-menu.component.html
@@ -18,7 +18,7 @@
         </li>
        
         <li><a class="nav-link" routerLink="/organizaciones" routerLinkActive="fw-bold">Organizaciones</a></li>
-        <li><a class="nav-link" routerLink="/nosotros" routerLinkActive="fw-bold">Sobre Nosotros</a></li>
+        <li><a class="nav-link" routerLink="/sobre-nosotros" routerLinkActive="fw-bold">Sobre Nosotros</a></li>
         <li><!-- From Uiverse.io by kamehame-ha --> 
           <button  routerLink="/login" routerLinkActive="fw-bold" class="button">
             <p class="text">Iniciar Sesión</p>
