--- a/PetHomeAngular/src/app/secciones/adopta/adopta.component.html
+++ b/PetHomeAngular/src/app/secciones/adopta/adopta.component.html
@@ -1,1 +1,5 @@
-<p>adopta works!</p>
+<div class="row row-cols-md-5">
+     @for (mascota of getMascota(); track $index) {
+      <app-mascota-card [mascota]="mascota"/>
+     }
+</div>
