--- a/PetHomeAngular/src/app/secciones/adopta/adopta.component.html
+++ b/PetHomeAngular/src/app/secciones/adopta/adopta.component.html
@@ -1,5 +1,9 @@
+
+hola
+
+
 <div class="row row-cols-md-5">
-     @for (mascota of getMascota(); track $index) {
+     @for (mascota of getMascotas(); track $index) {
       <app-mascota-card [mascota]="mascota"/>
      }
 </div>
