--- a/PetHomeAngular/src/app/secciones/adopta/mascota-card/mascota-card.component.html
+++ b/PetHomeAngular/src/app/secciones/adopta/mascota-card/mascota-card.component.html
@@ -1,8 +1,8 @@
 
     <div class="card-body">
-        <img src="{{mascota.Poster}}" class="card-img-top" alt="">
-        <h5 class="card-title">{{mascota.Title}}</h5>
-        <p class="card-text">{{mascota.Year}}</p>
+        <img src="{{mascota.Nombre}}" class="card-img-top" alt="">
+        <h5 class="card-title">{{mascota.Nombre}}</h5>
+        <p class="card-text">{{mascota.Edad}} años</p>
     </div>
 
 
