--- a/PetHomeAngular/src/app/nav-menu/nav-menu.component.html
+++ b/PetHomeAngular/src/app/nav-menu/nav-menu.component.html
@@ -1,6 +1,6 @@
 <nav>
     <div class="wrapper">
-      <div class="logo"><img src="/assets/img/logo pet home.png" alt="logo" class="logo"></div>
+      <div class="logo"  routerLink="/inicio"><img src="/assets/img/logo pet home.png" alt="logo" class="logo"></div>
       <input type="radio" name="slider" id="menu-btn">
       <input type="radio" name="slider" id="close-btn">
       <ul class="nav-links">
