--- a/PetHomeAngular/src/app/secciones/adopta/adopta.component.html
+++ b/PetHomeAngular/src/app/secciones/adopta/adopta.component.html
@@ -1,14 +1,146 @@
 
-
+<div class="hero">
+  <div class="overlay">
+    <h1>ADOPTA A UNA MASCOTA</h1>
+  </div>
+</div>
   
-      <div class="container mt-5 mb-5 adopta-container">
-        <h1 class="text-center section-title mb-3">Mascotas disponibles para adopción</h1>
-        <p class="text-center section-subtitle mb-5">¡Encuentra a tu nuevo mejor amigo!</p>
       
-        <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 justify-content-center">
-            @for (mascotas of getMascotas(); track $index) {
-                <app-mascota-card [mascota]="mascotas"/>
-               }
+  
+
+<div class="container mt-5 mb-5 adopta-container">
+  <div class="card p-4 shadow-lg">
+   
+
+    <div class="row">
+     
+      <!-- Columna izquierda: filtros -->
+      <div class="col-md-3">
+        <img src="/assets/img/pethome1.svg" alt="logo" class="logo">
+        <h3 class="text-center section-title mb-4">¡Encuentra a tu compañero ideal!</h3>
+        <select required name="provincia" id="pet-select" class="form-select mb-4">
+          <option value="">Elige Provincia</option>
+          <option value="Álava/Araba">Álava/Araba</option>
+          <option value="Albacete">Albacete</option>
+          <option value="Alicante">Alicante</option>
+          <option value="Almería">Almería</option>
+          <option value="Asturias">Asturias</option>
+          <option value="Ávila">Ávila</option>
+          <option value="Badajoz">Badajoz</option>
+          <option value="Baleares">Baleares</option>
+          <option value="Barcelona">Barcelona</option>
+          <option value="Burgos">Burgos</option>
+          <option value="Cáceres">Cáceres</option>
+          <option value="Cádiz">Cádiz</option>
+          <option value="Cantabria">Cantabria</option>
+          <option value="Castellón">Castellón</option>
+          <option value="Ceuta">Ceuta</option>
+          <option value="Ciudad Real">Ciudad Real</option>
+          <option value="Córdoba">Córdoba</option>
+          <option value="Cuenca">Cuenca</option>
+          <option value="Gerona/Girona">Gerona/Girona</option>
+          <option value="Granada">Granada</option>
+          <option value="Guadalajara">Guadalajara</option>
+          <option value="Guipúzcoa/Gipuzkoa">Guipúzcoa/Gipuzkoa</option>
+          <option value="Huelva">Huelva</option>
+          <option value="Huesca">Huesca</option>
+          <option value="Jaén">Jaén</option>
+          <option value="La Coruña/A Coruña">La Coruña/A Coruña</option>
+          <option value="La Rioja">La Rioja</option>
+          <option value="Las Palmas">Las Palmas</option>
+          <option value="León">León</option>
+          <option value="Lérida/Lleida">Lérida/Lleida</option>
+          <option value="Lugo">Lugo</option>
+          <option value="Madrid">Madrid</option>
+          <option value="Málaga">Málaga</option>
+          <option value="Melilla">Melilla</option>
+          <option value="Murcia">Murcia</option>
+          <option value="Navarra">Navarra</option>
+          <option value="Orense/Ourense">Orense/Ourense</option>
+          <option value="Palencia">Palencia</option>
+          <option value="Pontevedra">Pontevedra</option>
+          <option value="Salamanca">Salamanca</option>
+          <option value="Segovia">Segovia</option>
+          <option value="Sevilla">Sevilla</option>
+          <option value="Soria">Soria</option>
+          <option value="Tarragona">Tarragona</option>
+          <option value="Tenerife">Tenerife</option>
+          <option value="Teruel">Teruel</option>
+          <option value="Toledo">Toledo</option>
+          <option value="Valencia">Valencia</option>
+          <option value="Valladolid">Valladolid</option>
+          <option value="Vizcaya/Bizkaia">Vizcaya/Bizkaia</option>
+          <option value="Zamora">Zamora</option>
+          <option value="Zaragoza">Zaragoza</option>
+        </select>
+
+        <div class="radio-especie">
+        <h4 class="section-title mb-4">Especie</h4>
+        <div class="radio-container">
+          <div class="radio-wrapper">
+            <label class="radio-button">
+              <input id="option1" name="radio-group" type="radio">
+              <span class="radio-checkmark"></span>
+              <span class="radio-label">Perro</span>
+            </label>
+          </div>
+        
+          <div class="radio-wrapper">
+            <label class="radio-button">
+              <input id="option2" name="radio-group" type="radio">
+              <span class="radio-checkmark"></span>
+              <span class="radio-label">Gato</span>
+            </label>
+          </div>
+        
+          <div class="radio-wrapper">
+            <label class="radio-button">
+              <input id="option3" name="radio-group" type="radio">
+              <span class="radio-checkmark"></span>
+              <span class="radio-label">Otro</span>
+            </label>
+          </div>
         </div>
       </div>
-      
+
+      <div class="radio-especie">
+        <h4 class="section-title mb-4">Edad</h4>
+        <div class="radio-container">
+          <div class="radio-wrapper">
+            <label class="radio-button">
+              <input id="option1" name="radio-group" type="radio">
+              <span class="radio-checkmark"></span>
+              <span class="radio-label">0-1 años</span>
+            </label>
+          </div>
+        
+          <div class="radio-wrapper">
+            <label class="radio-button">
+              <input id="option2" name="radio-group" type="radio">
+              <span class="radio-checkmark"></span>
+              <span class="radio-label">1-2 años</span>
+            </label>
+          </div>
+        
+          <div class="radio-wrapper">
+            <label class="radio-button">
+              <input id="option3" name="radio-group" type="radio">
+              <span class="radio-checkmark"></span>
+              <span class="radio-label">2-4 años</span>
+            </label>
+          </div>
+        </div>
+      </div>
+      </div>
+
+      <!-- Columna derecha: tarjetas -->
+      <div class="col-md-9">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+          @for (mascotas of getMascotas(); track $index) {
+            <app-mascota-card [mascota]="mascotas"/>
+          }
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
