inicio dejado como antes

--- a/PetHomeAngular/src/app/secciones/inicio/inicio.component.html
+++ b/PetHomeAngular/src/app/secciones/inicio/inicio.component.html
@@ -59,33 +59,6 @@
       <p>Envía mensajes directamente a las protectoras. Ellas te guiarán en todo el proceso para adoptar de forma segura y responsable.</p>
     </div>
   </div>
-  <div class="card-container">
-    <!-- Carrusel 3D -->
-    <div class="card-3d">
-      <a href="#1"></a>
-      <a href="#2"></a>
-      <a href="#3"></a>
-      <a href="#4"></a>
-      <a href="#5"></a>
-      <a href="#6"></a>
-      <a href="#7"></a>
-      <a href="#8"></a>
-      <a href="#9"></a>
-      <a href="#10"></a>
-    </div>
-    
-  </div>
-  <!-- From Uiverse.io by kamehame-ha --> 
-  <!-- <button routerLink="/register" class="button">
-    <p class="text">Regístrate ya</p>
-  </button> -->
-</section>
-
-
-<!-- 
-<section class="adopcion-section">
-  <h2>Encuentra a tu compañero ideal</h2> -->
-  <!-- From Uiverse.io by musashi-13 -->
   <!-- <div class="card-container"> -->
     <!-- Carrusel 3D -->
     <!-- <div class="card-3d">
@@ -105,8 +78,35 @@
   <!-- From Uiverse.io by kamehame-ha --> 
   <!-- <button routerLink="/register" class="button">
     <p class="text">Regístrate ya</p>
+  </button> -->
+</section>
+
+
+
+<section class="adopcion-section">
+  <h2>Encuentra a tu compañero ideal</h2> 
+  <!-- From Uiverse.io by musashi-13 -->
+  <div class="card-container"> 
+    <!-- Carrusel 3D -->
+    <div class="card-3d">
+      <a href="#1"></a>
+      <a href="#2"></a>
+      <a href="#3"></a>
+      <a href="#4"></a>
+      <a href="#5"></a>
+      <a href="#6"></a>
+      <a href="#7"></a>
+      <a href="#8"></a>
+      <a href="#9"></a>
+      <a href="#10"></a>
+    </div>
+    
+  </div>
+  <!-- From Uiverse.io by kamehame-ha --> 
+  <button routerLink="/register" class="button">
+    <p class="text">Regístrate ya</p>
   </button>
-</section> -->
+</section>
 
 <section class="faq-section">
   <div class="faq-card">
