--- a/PetHomeAngular/src/app/secciones/organizaciones/organizaciones.component.html
+++ b/PetHomeAngular/src/app/secciones/organizaciones/organizaciones.component.html
@@ -1,1 +1,16 @@
-<p>organizaciones works!</p>
+
+<!-- <div class="hero">
+ 
+</div> -->
+
+
+
+  <!-- </div> -->
+  <section class="organizacion-card-section col-md-9">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        @for (organizacion of getOrganizaciones(); track $index) {
+            <app-organizacion-card [org]="organizacion"/>
+          }
+      </div>
+  </section>
+    
