--- a/PetHomeAngular/src/app/nav-menu/nav-menu.component.html
+++ b/PetHomeAngular/src/app/nav-menu/nav-menu.component.html
@@ -20,7 +20,7 @@
         <li><a class="nav-link" routerLink="/organizaciones" routerLinkActive="fw-bold">Organizaciones</a></li>
         <li><a class="nav-link" routerLink="/sobre-nosotros" routerLinkActive="fw-bold">Sobre Nosotros</a></li>
         <li><!-- From Uiverse.io by kamehame-ha --> 
-          <button  routerLink="/login" routerLinkActive="fw-bold" class="button">
+          <button  routerLink="/login" routerLinkActive="fw-bold" class="button-inicio">
             <p class="text">Iniciar Sesión</p>
           </button></li>
           <li><!-- From Uiverse.io by kamehame-ha --> 
