--- a/PetHomeAngular/src/app/secciones/adopta/mascota-card/mascota-card.component.html
+++ b/PetHomeAngular/src/app/secciones/adopta/mascota-card/mascota-card.component.html
@@ -6,7 +6,8 @@
       <p class="card__title">{{mascota.nombre}}</p>
       <p class="card__description">{{mascota.edad}} años</p>
       <p class="card__description">{{mascota.descripcion}}</p>
-      <a href="#" class="btn btn-outline-primary btn-block">¡Adóptame!</a>
+      
+       <button [routerLink]="['/detalles', mascota.id]" type="button" class="btn btn-primary">¡Adóptame!</button>
     </div>
   </div>
   
