añadido detalle mascota

--- a/PetHomeAngular/src/app/secciones/adopta/mascota-card/mascota-card.component.html
+++ b/PetHomeAngular/src/app/secciones/adopta/mascota-card/mascota-card.component.html
@@ -7,7 +7,7 @@
       <p class="card__description">{{mascota.edad}} años</p>
       <p class="card__description">{{mascota.descripcion}}</p>
       
-       <button [routerLink]="['/detalles', mascota.id]" type="button" class="btn btn-primary">¡Adóptame!</button>
+       <button [routerLink]="['/detalle-mascota', mascota.id]" type="button" class="btn btn-primary">¡Adóptame!</button>
     </div>
   </div>
   
