--- a/PetHomeAngular/src/app/auth/login/login.component.html
+++ b/PetHomeAngular/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="loginForm" (ngSubmit)="login()">
   <h2>Iniciar sesión</h2>
 
   <input formControlName="email" placeholder="Email" type="email" />
